# rust_openapi_playground

./: Cargo.toml  README.md
try_poem/: Cargo.toml
try_poem/src/: lib.rs  main.rs
try_utoipa/: Cargo.toml
try_utoipa/src/: lib.rs  main.rs
